Set unregistered routes: topics; topic. Documentation update
